; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/drbd/extr_drbd_state.c_conn_request_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/drbd/extr_drbd_state.c_conn_request_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drbd_connection = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%union.drbd_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @conn_request_state(%struct.drbd_connection* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %union.drbd_state, align 4
  %6 = alloca %union.drbd_state, align 4
  %7 = alloca %struct.drbd_connection*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = getelementptr inbounds %union.drbd_state, %union.drbd_state* %5, i32 0, i32 0
  store i32 %1, i32* %10, align 4
  %11 = getelementptr inbounds %union.drbd_state, %union.drbd_state* %6, i32 0, i32 0
  store i32 %2, i32* %11, align 4
  store %struct.drbd_connection* %0, %struct.drbd_connection** %7, align 8
  store i32 %3, i32* %8, align 4
  %12 = load %struct.drbd_connection*, %struct.drbd_connection** %7, align 8
  %13 = getelementptr inbounds %struct.drbd_connection, %struct.drbd_connection* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @spin_lock_irq(i32* %15)
  %17 = load %struct.drbd_connection*, %struct.drbd_connection** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = getelementptr inbounds %union.drbd_state, %union.drbd_state* %5, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %union.drbd_state, %union.drbd_state* %6, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @_conn_request_state(%struct.drbd_connection* %17, i32 %20, i32 %22, i32 %18)
  store i32 %23, i32* %9, align 4
  %24 = load %struct.drbd_connection*, %struct.drbd_connection** %7, align 8
  %25 = getelementptr inbounds %struct.drbd_connection, %struct.drbd_connection* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = call i32 @spin_unlock_irq(i32* %27)
  %29 = load i32, i32* %9, align 4
  ret i32 %29
}

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @_conn_request_state(%struct.drbd_connection*, i32, i32, i32) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
